<resources>
    <string name="app_name">Fondografia</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    d


    <string name="desarrollador">Desarrollado por: Cristian Gimenez</string>

    <!--MENU ADMIN-->
    <string name="InicioAdmin">Inicio</string>
    <string name="PerfilAdmin">Perfil</string>
    <string name="RegistrarAdmin">Registrar</string>
    <string name="ListarAdmin">Lista de administradores</string>
    <string name="Salir">Cerrar sesion</string>


    <!--MENU CLIENTE-->
    <string name="Opcionestxt">Opciones</string>
    <string name="InicioCliente">Inicio</string>

    <string name="MasOpcionestxt">Más opciones</string>
    <string name="AcercaDe">Acerca De</string>
    <string name="Compartir">Compartir</string>
    <string name="Acceder">Acceder</string>


    <!--- REGISTRO DE ADMINISTRADORES-->
    <string name="RegistroTXT">Registro de administradores</string>
    <string name="Correo">Correo electronico</string>
    <string name="Password">Contraseña</string>
    <string name="Nombres">Nombres completos</string>
    <string name="Apellidos">Apellidos completos</string>
    <string name="Edad">Edad</string>
    <string name="FechaRegistro">Fecha de registro</string>
    <string name="Registrar">Registrar</string>

    <!--- LOGIN DE ADMINISTRADORES-->
    <string name="LoginTXT">Login de administradores</string>
    <string name="Ingresar">Ingresar</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>