<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context=".FragmentosAdministrador.RegistrarAdmin">




   <androidx.appcompat.widget.LinearLayoutCompat
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical"
       android:padding="15dp">

      <TextView
          android:text="@string/RegistroTXT"
          android:gravity="center"
          android:textColor="#000"
          android:textStyle="bold"
          android:textSize="18sp"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"/>

      <!--FOTO DE PERFIL-->
      
      <androidx.appcompat.widget.AppCompatImageView
          android:layout_width="100dp"
          android:layout_height="100dp"
         android:layout_gravity="center"
          android:src="@drawable/admin"
          android:layout_marginTop="20dp"/>

      <!--CORREO ELECTRONICO-->

      <com.google.android.material.textfield.TextInputLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content">

         <EditText
             android:id="@+id/Correo"
             android:hint="@string/Correo"
             android:layout_width="match_parent"
             android:layout_height="48dp"/>

         
      </com.google.android.material.textfield.TextInputLayout>


      <com.google.android.material.textfield.TextInputLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content">
         
         <EditText
             android:id="@+id/Password"
             android:hint="@string/Password"
             android:layout_width="match_parent"
             android:layout_height="48dp"/>

      </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.textfield.TextInputLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content">
         
         <EditText
             android:id="@+id/Nombres"
             android:hint="@string/Nombres"
             android:layout_width="match_parent"
             android:layout_height="48dp"/>


      </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.textfield.TextInputLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content">

         <EditText
             android:id="@+id/Apellidos"
             android:hint="@string/Apellidos"
             android:layout_width="match_parent"
             android:layout_height="48dp"/>

      </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.textfield.TextInputLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content">

         <EditText
             android:id="@+id/Edad"
             android:hint="@string/Edad"
             android:layout_width="match_parent"
             android:layout_height="48dp"/>

      </com.google.android.material.textfield.TextInputLayout>

   </androidx.appcompat.widget.LinearLayoutCompat>


</ScrollView>